# lambda-nop

./: .dockerignore  .gitignore  Cargo.toml  README.md  al2023-build.dockerfile  build.sh  docker-bake.hcl  github-actions-bake.hcl  github-actions.dockerfile  rustfmt.toml
.github/workflows/: ci.yml
terraform/: .gitignore  .terraform.lock.hcl  alb.tf  ionosphere.s3.tfbackend  lambda.tf  lambda_url.tf  names.tf  provider.tf  vars.tf
