[package]
name = "lambda-nop"
description = "An AWS Lambda function that does nothing; useful for bootstrapping Terraform/IaC, and not much more."
edition = "2021"
homepage = "https://github.com/dacut/lambda-nop"
license = "Apache-2.0"
repository = "https://github.com/dacut/lambda-nop.git"
version = "0.1.0"

[[bin]]
name = "bootstrap"

[dependencies]
lambda_runtime = "0.8.3"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }

[dev_dependencies]
aws_lambda_events = "0.12.1"
